# learning-OpenGL

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.ps1  clang-format  git.ps1
configuration/: root_directory.h.in
includes/openglapp/: camera.h  filesystem.h  mesh.h  model.h  shader.h
src/1.getting_started/1.1.triangle/: main.cpp
src/1.getting_started/4.1.textures/: main.cpp
src/1.getting_started/4.2.textures_combined/: main.cpp
src/1.getting_started/5.1.transformations/: transformations.cpp
src/1.getting_started/5.2.coordinate_system/: coordinate_system.cpp
src/1.getting_started/6.1.coordinate_system/: coordinate_system.cpp
src/1.getting_started/7.1.camera/: camera.cpp
src/2.lighting/1.colors/: colors.cpp
src/2.lighting/2.1.basic_lighting_ambient/: ambient.cpp
src/2.lighting/2.2.basic_lighting_diffuse/: diffuse.cpp
src/2.lighting/2.3.materials/: material.cpp
src/2.lighting/2.4.maps/: maps.cpp
src/2.lighting/2.5.directional_light/: directional_light.cpp
src/2.lighting/2.6.point_light/: point_light.cpp
src/2.lighting/2.7.spot_light/: spot_light.cpp
src/2.lighting/2.8.multiple_lights/: multiple_lights.cpp
src/3.model_loading/3.1.model_loading/: assimp.cpp
src/4.advanced_opengl/4.1.depth_testing/: 4.1.depth_testing.cpp
src/4.advanced_opengl/4.10.normal_visualization/: 4.10.normal_visualization.cpp
src/4.advanced_opengl/4.11.instancing/: 4.11.instancing.cpp
src/4.advanced_opengl/4.12.instanced_arrays/: 4.12.instanced_arrays.cpp
src/4.advanced_opengl/4.13.asteroids/: 4.13.asteroids.cpp
src/4.advanced_opengl/4.14.instanced_asteroids/: 4.14.instanced_asteroids.cpp
src/4.advanced_opengl/4.15.msaa/: 4.15.msaa.cpp
src/4.advanced_opengl/4.16.msaa_background/: 4.16.msaa_background.cpp
src/4.advanced_opengl/4.2.stencil_testing/: 4.2.stencil_testing.cpp
src/4.advanced_opengl/4.3.blending/: 4.3.blending.cpp
src/4.advanced_opengl/4.3.blending-func/: 4.3.blending-func.cpp
src/4.advanced_opengl/4.4.face_culling/: 4.4.face_culling.cpp
src/4.advanced_opengl/4.5.frame_buffers/: 4.5.frame_buffers.cpp
src/4.advanced_opengl/4.6.post_processing/: 4.6.post_processing.cpp
src/4.advanced_opengl/4.7.skybox/: 4.7.skybox.cpp
src/4.advanced_opengl/4.8.glsl_ubo/: 4.8.glsl_ubo.cpp
src/4.advanced_opengl/4.9.geometry_shader/: 4.9.geometry_shader.cpp
src/5.advanced_lighting/5.1.blinn_phong/: blinn_phong.cpp
src/5.advanced_lighting/5.2.gamma_correction/: gamma_correction.cpp
src/5.advanced_lighting/5.3.1.shadow_mapping_depth/: shadow_mapping_depth.cpp
src/5.advanced_lighting/5.3.2.shadow_mapping_base/: shadow_mapping_base.cpp
src/5.advanced_lighting/5.4.point_shadows/: point_shadows.cpp
src/5.advanced_lighting/5.5.1.normal_mapping/: normal_mapping.cpp
src/5.advanced_lighting/5.5.2.normal_mapping_model/: normal_mapping_model.cpp
src/5.advanced_lighting/5.5.hdr/: hdr.cpp
src/5.advanced_lighting/5.6.1.parallax_mapping/: parallax_mapping.cpp
src/5.advanced_lighting/5.6.2.steep_parallax_mapping/: steep_parallax_mapping.cpp
src/5.advanced_lighting/5.7.bloom/: bloom.cpp
src/5.advanced_lighting/5.8.deferred_shading/: deferred_shading.cpp
src/5.advanced_lighting/5.9.deferred_shading_volume/: deferred_shading_volume.cpp
src/shaders/: 2.1.1.colors.fs  4.1.texture.fs  4.1.texture.vs  4.2.texture.vs  5.1.transform.vs  5.2.coordinates.fs  6.1.transform.fs  7.1.coordinates.vs
src/shaders/1.getting_started/: 4.2.texture.fs
src/shaders/2.lighting/: 1.1.colors.fs  1.1.colors.vs  2.1.ambient.fs  2.2.diffuse.fs  2.2.diffuse.vs  2.3.material.fs  2.4.maps.fs  2.5.directional_light.fs  2.6.point_light.fs  2.7.spot_light.fs  2.8.multiple_lights.fs  light_cube.fs
src/shaders/3.model_loading/: 1.model_loading.fs  1.model_loading.vs
src/shaders/4.advanced_opengl/: 1.1.depth_testing.fs  1.1.stencil_border.fs  1.2.blending-func.fs  1.2.blending.fs  1.3.face_culling.fs  1.4.frame_buffer.fs  1.4.frame_buffer.vs  1.5.skybox.fs  1.5.skybox.vs  1.6.glsl_ubo.vs  1.7.geometry_shader.fs  1.7.geometry_shader.gs  1.7.geometry_shader.vs  asteroids.vs  instanced_asteroids.fs  instanced_asteroids.vs  normal_display.gs  normal_display.vs  quad_shader.fs  quad_shader.vs
src/shaders/5.advanced_lighting/: 5.7.blur.fs  5.8.deferred_shading.fs  5.8.lighting_pass.fs  5.9.lighting_pass.fs  blinn_phong.fs  debugDepthQuad.fs  gamma_correction.fs  light_cube.fs  normal_mapping.fs  normal_mapping.vs  normal_mapping_model.fs  normal_mapping_model.vs  parallax_mapping.fs  parallax_mapping.vs  parallax_mapping_steep.fs  point_shadows.fs  point_shadows.vs  point_shadows_depth.gs  point_shadows_depth.vs  screen_quad.fs  screen_quad.vs  shadowMappingBase.fs  shadowMappingBase.vs  simpleDepthShader.fs  simpleDepthShader.vs
